repair view on mobile devices

--- a/style.css
+++ b/style.css
@@ -10,46 +10,38 @@ body {
 }
 
 #board {
-    position: absolute;
+    position: relative;
     left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-
-    background: #000;
-    opacity: 0.9;
-    border: 2px solid #fff;
     width: 90%;
     height: 90%;
+    background: #000;
+    opacity: 0.9;
+    transform: translateX(-50%);
+    border: 2px solid #fff;
 }
 
 .score {
-    position: absolute;
-    bottom: calc(100% - 50px);
-    left: calc(50% - 50px);
-    min-width: 100px;
+    position: relative;
+    display: block;
+    background-color: #fff;
+    color: #ff6347;
     font-size: 16px;
     text-align: center;
-    color: #ff6347;
-    background-color: #fff;
-    border-radius: 20px;
-    border: 2px solid #fff;
-    padding: 5px;
-    opacity: .85;
-    z-index: 1;
+    padding: 10px;
+    margin-bottom: 10px;
 }
 
 #character {
+    position: absolute;
     height: 10px;
     width: 10px;
-    position: absolute;
     background: #ff6347;
-    opacity: 1;
 }
 
 .chain, .apple, .superpower {
+    position: absolute;
     height: 10px;
     width: 10px;
-    position: absolute;
     background-repeat: no-repeat;
     background-position: center;
 }
@@ -59,7 +51,7 @@ body {
     height: 100%;
     width: 100%;
     background-color: #000;
-    z-index: 2;
+    z-index: 1;
 }
 
 .loader .info {
@@ -70,13 +62,13 @@ body {
 }
 
 .info h2 {
-    color: green;
+    color: #ff6347;
 }
 
 .info .version {
     color: white;
     text-align: center;
-    border: 2px solid green;
+    border: 2px solid #ff6347;
     padding: 10px;
     margin-top: 5px;
     transition: 1s;
@@ -91,11 +83,11 @@ body {
 }
 
 .mobile.buttons {
-    position: absolute;
+    position: relative;
     left: 50%;
-    bottom: -0px;
-    transform: translate(-50%, -50%);
-    height: 80px;
+    transform: translateX(-50%);
+    margin-top: 10px;
+    height: 20%;
     width: 100%;
     text-align: center;
 }
